# doxle-annotations-be

./: .gitignore  CLOUDFRONT_ARCHITECTURE.md  CLOUDFRONT_SETUP.md  CLOUDFRONT_STATUS.md  Cargo.toml  Cargo.toml.old  IMAGE_PYRAMID_PLAN.md  MIGRATION_SUMMARY.md  README.md  S3_UPLOAD_GUIDE.md  TESTING_CHECKLIST.md  cloudfront-api-cache.yaml  cloudfront-response-headers-policy.json  cloudfront-stack.yaml  deploy-cloudfront.sh  monitoring-stack.yaml  s3-bucket-policy.json
annotation-tools/: Cargo.toml
annotation-tools/src/: lib.rs
canvas-bevy/: Cargo.toml
canvas-bevy/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml  Cognito.rtf  database.md
database/src/: lib.rs
lambdas/api-lambda/: Cargo.toml
lambdas/api-lambda/src/: http_handler.rs  main.rs
lambdas/doxle-api/: Cargo.toml
lambdas/doxle-api/src/: http_handler.rs  main.rs  users.rs
lambdas/doxle-auth/: Cargo.toml  README.md
lambdas/doxle-auth/src/: auth.rs  http_handler.rs  main.rs
lambdas/doxle-user/: Cargo.toml  README.md
lambdas/doxle-user/src/: http_handler.rs  inviyte_email.html  main.rs  types.rs
lambdas/stream-lambda/: Cargo.toml
lambdas/stream-lambda/src/: main.rs
scripts/: clean_dynamodb.sh  deploy-del-monitoring.sh  deploy_lambda.sh  generate-cloudfront-keys.sh
shared/: Cargo.toml
shared/src/: annotations.rs  auth.rs  blocks.rs  classes.rs  cloudfront.rs  email.rs  image_processing.rs  image_proxy.rs  images.rs  invites.rs  lib.rs  projects.rs  s3.rs  s3_multipart.rs  types.rs  users.rs
shared/src/sockets/: broadcast.rs  connections.rs  handler.rs  messages.rs  mod.rs
ui-components/: Cargo.toml
ui-components/src/: lib.rs
