[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/database",
    "crates/auth",
    "lambdas/doxle-user",
]

[workspace.dependencies]
# Shared versions across all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "js"] }
chrono = "0.4"

# AWS SDK (Latest versions)
aws-config = "1.8"
aws-sdk-dynamodb = "1.95"
aws-sdk-s3 = "1.108"

# Auth
argon2 = "0.5"

# Error handling
anyhow = "1"
thiserror = "1"

# Dioxus 0.7 RC
dioxus = { version = "0.7.0-rc.0", features = ["router"] }

# Bevy 0.16
bevy = { version = "0.16", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }
