[package]
name = "annotation-tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Internal crates
doxle-core = { path = "../core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Math/geometry
glam = "0.29"  # Vector math library
