[package]
name = "doxle-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-apigatewaymanagement = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

lambda_http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
rsa = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }

tokio = { workspace = true }
