[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Internal crates
doxle-core = { path = "../core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Auth specific
argon2 = { workspace = true }
