[package]
name = "doxle-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"

tokio = { version = "1", features = ["macros"] }
