[package]
name = "doxle-user"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
aws-sdk-dynamodb = "1.95"
aws-config = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"

tokio = { version = "1", features = ["macros"] }
